Fixes in overflow damages of the home page

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,9 @@
   font-family: 'Inika';
 
 }
-
+body{
+  overflow-x: hidden;
+}
 
 body::-webkit-scrollbar-track
 {
